added a register page

--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -14,6 +14,7 @@
     <script src="assets/js/angular-route.js"></script>
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
+    <script src="app/controllers/userctrl.js"></script>
 
     <title>SyllabusLink</title>
  
@@ -30,6 +31,7 @@
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">SyllabusLink</a>
@@ -38,7 +40,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/register">Register</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
