--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -8,20 +8,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+
+    <!-- Cascade Style Sheets -->
     <link rel="stylesheet" type= "text/css" href ="assets/css/bootstrap.css">
 
+    <!-- Main Angular Files -->
     <script src="assets/js/angular.js"></script>
     <script src="assets/js/angular-route.js"></script>
+
+    <!-- Angular Config/routes -->
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
+
+    <!-- Angular Controlles -->
     <script src="app/controllers/userctrl.js"></script>
+    <script src="app/controllers/mainCtrl.js"></script>
+
+    <!-- Angular Services -->
+    <script src = "app/services/userServices.js"></script>
+    <script src = 'app/services/authServices.js'></script>
 
     <title>SyllabusLink</title>
  
 
   </head>
 
-  <body ng-app="userApp">
+  <body ng-app="userApp" ng-controller = "mainCtrl as main"> <!-- inject mainCtrl here so user can be logged in across pages. -->
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -39,7 +51,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
