--- a/MEANapp/public/app/views/pages/users/register.html
+++ b/MEANapp/public/app/views/pages/users/register.html
@@ -1,16 +1,19 @@
 <div class = 'page-header'>
-<h1>User Registration</h1>
+	<h1>User Registration</h1>
 </div>
 
 <form ng-submit= "register.regUser(regData);">
 	
+
 	<label>Email: </label>
 	<input class = "form-control" type="text" name="email" placeholder="Please enter your Email" ng-model = "register.regData.email">
 	<br>
 
+
 	<label>Username:</label>
 	<input class = "form-control" type="text" name="username" placeholder ="Please enter you Username" ng-model = "register.regData.username">
 	<br>
+
 
 	<label>Password:</label>
 	<input class = "form-control" type="password" name="password" placeholder="Please enter your Password" ng-model = "register.regData.password">
@@ -18,4 +21,27 @@
 
 	<button class = "btn btn-primary" type= "submit">Register</button>
 
+
 </form>
+
+
+<br>
+
+<div class = "jumbotron text-center" ng-show = "register.loading"> <!--whenever ng-show is called it performs action when the .something is called-->
+	<span class = "glyphicon-repeat spinner"></span>
+	<p>Loading....</p>
+</div>
+
+
+
+<br>
+
+<div class = "row show-hide-message" ng-show = "register.successMsg">
+	<div class = "alert alert-success">{{ register.successMsg }}</div>  <!--double brackets is how angular passes data to controller to html page-->
+</div>
+
+<br>
+
+<div class = "row show-hide-message" ng-show = " register.errorMsg">
+	<div class = "alert alert-danger">{{ register.errorMsg }}</div>
+</div>
