--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -33,7 +33,7 @@
 
   </head>
 
-  <body ng-app="userApp" ng-controller = "mainCtrl as main"> <!-- inject mainCtrl here so user can be logged in across pages. -->
+  <body ng-app="userApp" ng-controller = "mainCtrl as main" ng-show ="main.loadme" ng-cloak> <!-- inject mainCtrl here so user can be logged in across pages. -->
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -51,9 +51,10 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
-            <li><a href = "#" ng-click = "main.logout();">Logout</a></li>
+            <li><a ng-show ="!main.isLoggedIn" href ='/login'>Login</a></li>
+
+            <li><a ng-show ="!main.isLoggedIn" href="/register">Register</a></li>
+            <li><a ng-show ="main.isLoggedIn" href = "#" ng-click = "main.logout();">Logout</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -66,6 +67,7 @@
                 <li><a href="#">One more separated</a></li>
               </ul>
             </li>
+            <li><a ng-show ="main.isLoggedIn" href = "/profile"> Hello {{main.username}} </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
