--- a/MEANapp/public/app/views/pages/users/syllabus.html
+++ b/MEANapp/public/app/views/pages/users/syllabus.html
@@ -4,8 +4,65 @@
 
 <!-- Insert Mandartory Course info provided on course creation-->
 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Create Dynamic form Using JavaScript</title>
+<script src="js/form.js" type="text/javascript"></script>
+<link href="form.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="main_content">
+<!--
+========================================================================================
+Header Div.
+========================================================================================
+-->
+<div class="first">
+<p>
+</a> Syllabus Builder</p>
+</div>
+<!--
+======================================================================================
+This Div is for the Buttons. When user click on buttons, respective field will appear.
+=======================================================================================
+-->
+<div class="two">
+<h4>Syllabus Component Blocks</h4>
+<button onclick="homeworkBlock()">Homework</button>
+<button onclick="taFunction()">TA</button>
+<button onclick="ExamFunction()">Exam</button>
+<button onclick="projectFunction()">Project</button>
+<button onclick="otherFunction()">Other</button>
+</div>
+<!--
+========================================================================================
+This Div is meant to display final form.
+========================================================================================
+-->
+<div class="three">
+<h2>Syllabus Data Dynamic Form</h2>
+<form action="#" id="mainform" method="get" name="mainform">
+<span id="sylData"></span>
+<p></p><input type="submit" value="Submit">
+</form>
+</div>
 
-<form ng-submit= "main.doLogin(loginData);">
+<!--
+========================================================================================
+Footer Div.
+========================================================================================
+-->
+<div class="four">
+<p>
+</a> SyllabusLink.com</p>
+</div>
+</div>
+</body>
+</html>
+
+
+<!--<form ng-submit= "main.doLogin(loginData);">
 
     <label>Username:</label>
     <input class = "form-control" type="text" name="username" placeholder ="Please enter you Username" ng-model = "main.loginData.username">
@@ -19,7 +76,7 @@
     <button class = "btn btn-primary" type= "submit">Login</button>&nbsp
     <a href = "/auth/facebook" target = "_blank"><button type = "button" class = "btn btn-success">Facebook</button></a>
 
-</form>
+</form>-->
 
 
 
