added permissions -admin -student -teacher

--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -23,6 +23,7 @@
     <!-- Angular Controlles -->
     <script src="app/controllers/userctrl.js"></script>
     <script src="app/controllers/mainCtrl.js"></script>
+    <script src="app/controllers/managementCtrl.js"></script>
 
     <!-- Angular Services -->
     <script src = "app/services/userServices.js"></script>
@@ -62,7 +63,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/syllabus">syllabus</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="/management">Management</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
                 <li><a href="#">Separated link</a></li>
