--- a/MEANapp/public/app/views/pages/users/register.html
+++ b/MEANapp/public/app/views/pages/users/register.html
@@ -19,6 +19,8 @@
 	<input class = "form-control" type="password" name="password" placeholder="Please enter your Password" ng-model = "register.regData.password">
 	<br>
 
+	<!-- <input type = "checkbox" value = true checked ng-model = "register.regData.teacher`">Are you a teacher?<br> -->
+
 	<button class = "btn btn-primary" type= "submit">Register</button>
 
 
