--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -68,7 +68,7 @@
                 <li><a href="/management">Management</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="/calendar">Calendar</a></li>
                 <li><a href="#">One more separated</a></li>
                 <li><a href="#">authorize</a></li>
               </ul>
