--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -69,7 +69,7 @@
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
                 <li><a href="/calendar">Calendar</a></li>
-                <li><a href="#">One more separated</a></li>
+                <li><a href="/printevent">print events</a></li>
                 <li><a href="#">authorize</a></li>
               </ul>
             </li>
