--- a/MEANapp/public/app/views/index.html
+++ b/MEANapp/public/app/views/index.html
@@ -26,10 +26,11 @@
     <script src="app/controllers/managementCtrl.js"></script>
     <script src="app/controllers/homeworkCtrl.js"></script>
 
+
     <!-- Angular Services -->
     <script src = "app/services/userServices.js"></script>
     <script src = "app/services/authServices.js"></script>
-
+    <script src="app/services/homeworkServices.js"></script>
 
 
     <title>SyllabusLink</title>
@@ -68,8 +69,8 @@
                 <li><a href="/management">Management</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
-                <li><a href="/calendar">Calendar</a></li>
-                <li><a href="/printevent">print events</a></li>
+                <li><a href="/retrieveHW">check dat HW</a></li>
+                <li><a href="/getmongo">print events</a></li>
                 <li><a href="#">authorize</a></li>
               </ul>
             </li>
